View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027890 | Open CASCADE | OCCT:Modeling Algorithms | public | 2016-09-21 17:02 | 2016-12-09 16:38 |
Reporter | isn | Assigned To | kgv | ||
Priority | low | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027890: BndLib_Add2dCurve::Add(..) works incorrect on some curves | ||||
Description | BndLib_Add2dCurve construct the incorrect box for some curves (see attachment). [The curve is an offset curve based on trimmed bspline]. Yet it works well with similar AddOptimal() method. | ||||
Steps To Reproduce | (DRAW) restore t1.brep gbound t1 av2d | ||||
Tags | No tags attached. | ||||
Test case number | bugs moddata_3 bug27890 | ||||
|
t1.brep (827 bytes) |
|
Branch CR27890 has been created by isn. SHA-1: 3a46f887da9be24b7fe1ac668927b0bb560ca513 Detailed log of new commits: Author: isn Date: Thu Sep 22 14:42:30 2016 +0300 0027890: BndLib_Add2dCurve::Add(..) works incorrect on some curves new testcase: extension for 'gbounding' command. now this command allows to pass curve2d as args and works in two modes ('normal' and optimal) |
|
wrong_res.jpg (22,016 bytes) |
|
Branch CR27890 has been updated by isn. SHA-1: 9cb4cd0ab77a1661e2f90bf3d1a08392c566b91a Detailed log of new commits: Author: isn Date: Mon Sep 26 11:48:39 2016 +0300 actual fix |
|
Remarks: - Change the sense of -o option in gbounding command: by default compute non-optimal box, -o turns on optimal mode. |
|
Branch CR27890 has been updated by isn. SHA-1: 725abf92f9c2e71909468f0f93c315cac2b93bdd Detailed log of new commits: Author: isn Date: Tue Sep 27 20:19:31 2016 +0300 reversed meaning of -o option |
|
Reviewed. |
|
Branch CR27890 has been updated forcibly by mkv. SHA-1: e4847e48b230a2c0f9ba42e87942d770faed9b19 |
|
Dear BugMaster, Branch CR27890 was rebased on current master of occt git-repository. SHA-1: e4847e48b230a2c0f9ba42e87942d770faed9b19 |
|
Dear BugMaster, Branch CR27890 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: e4847e48b230a2c0f9ba42e87942d770faed9b19 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1152 Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR27890-master-OCCT/Debian70-64/bugs/moddata_3/bug27890.html http://occt-tests/CR27890-master-OCCT/Windows-64-VC10/bugs/moddata_3/bug27890.html bugs moddata_3 bug27890: OK Testing on Linux: occt component : Total MEMORY difference: 90948362 / 90241838 [+0.78%] Total CPU difference: 19304.479999999843 / 19251.899999999878 [+0.27%] products component : Total MEMORY difference: 30013603 / 30046985 [-0.11%] Total CPU difference: 5107.559999999982 / 5151.099999999975 [-0.85%] Testing on Windows: occt component : Total MEMORY difference: 57214075 / 57221541 [-0.01%] Total CPU difference: 17944.70142939862 / 18310.78897609872 [-2.00%] products component : Total MEMORY difference: 21271141 / 21235672 [+0.17%] Total CPU difference: 4900.880615699949 / 4988.631178199945 [-1.76%] There are following differences in images found by testdiff. http://occt-tests/CR27890-master-OCCT/Debian70-64/diff-Debian70-64.html http://occt-tests/CR27890-master-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html IMAGE bugs moddata_2 bug278_1: bug278_1.png differs IMAGE bugs moddata_2 bug278_2: bug278_2.png differs |
|
Dear isn, Branch CR27890 has been rejected due to: - differences in images |
|
Branch CR27890 has been updated by mkv. SHA-1: 79a90f5f442fa99f8b1d459da80d660983004dc9 Detailed log of new commits: Author: mkv Date: Wed Sep 28 17:00:01 2016 +0300 Test cases for issue CR27890 |
|
Dear isn, could you please review following test case http://occt-tests/CR27890-master-OCCT/Debian70-64/bugs/moddata_3/bug27890.html http://occt-tests/CR27890-master-OCCT/Windows-64-VC10/bugs/moddata_3/bug27890.html bugs moddata_3 bug27890 |
|
dear mkv, >>Branch CR27890 has been rejected due to: >>- differences in images It's OK. there are many difference in images caused by different isoline drawing after this fix. DBRep_IsoBuilder calls BRepTools::UVBounds() function to calculate 2d bnd box of the face. Now it calculated much more correctly. (one of this examples - bugs moddata_2 bug278_1). Also, I've noticed that some cases (sewing tol_100 J6, for ex.) don't even break at BndLib_Box2dCurve::PerformOther() (where I made my corrections). Maybe it's some kind of run-to-run deviations? >>could you please review following test case it's OK, maybe we should also add checking of the bounding box coordinates with some tolerance? (right after the 'gbounding' command). |
|
Branch CR27890 has been updated by mkv. SHA-1: 527f7c00295e20ee62b7c57c09648bdc19e66dda Detailed log of new commits: Author: mkv Date: Thu Sep 29 12:28:10 2016 +0300 Small correction of test case for issue CR27890 |
|
Dear BugMaster, following test case bug/ moddata_3/bug27890 was modified and pushed to branch CR27890 of occt git-repository http://occt-tests/CR27890-master-OCCT/Debian70-64/bugs/moddata_3/bug27890.html http://occt-tests/CR27890-master-OCCT/Windows-64-VC10/bugs/moddata_3/bug27890.html bugs moddata_3 bug27890: OK |
|
Branch CR27890 has been deleted by kgv. SHA-1: 527f7c00295e20ee62b7c57c09648bdc19e66dda |
occt: master ece3f950 2016-09-22 11:42:30 Committer: kgv Details Diff |
0027890: BndLib_Add2dCurve::Add(..) works incorrect on some curves Draw Harness command 'gbounding' has been extended to pass curve2d as args and to work in two modes ('normal' and optimal). |
Affected Issues 0027890 |
|
mod - src/BndLib/BndLib_Add2dCurve.cxx | Diff File | ||
mod - src/BRepTest/BRepTest_BasicCommands.cxx | Diff File | ||
add - tests/bugs/moddata_3/bug27890 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-09-21 17:02 | isn | New Issue | |
2016-09-21 17:02 | isn | Assigned To | => isn |
2016-09-21 17:02 | isn | File Added: t1.brep | |
2016-09-22 09:37 | msv | Priority | normal => low |
2016-09-22 09:37 | msv | Status | new => assigned |
2016-09-22 14:42 | git | Note Added: 0058023 | |
2016-09-22 14:46 | isn | Steps to Reproduce Updated | |
2016-09-22 14:48 | isn | File Added: wrong_res.jpg | |
2016-09-26 11:50 | git | Note Added: 0058148 | |
2016-09-26 11:50 | isn | Assigned To | isn => msv |
2016-09-26 11:50 | isn | Status | assigned => resolved |
2016-09-26 16:43 | msv | Note Added: 0058166 | |
2016-09-26 16:43 | msv | Assigned To | msv => isn |
2016-09-26 16:43 | msv | Status | resolved => assigned |
2016-09-27 20:19 | git | Note Added: 0058231 | |
2016-09-27 20:20 | isn | Assigned To | isn => msv |
2016-09-27 20:20 | isn | Status | assigned => resolved |
2016-09-27 20:20 | isn | Steps to Reproduce Updated | |
2016-09-27 20:30 | msv | Note Added: 0058232 | |
2016-09-27 20:30 | msv | Assigned To | msv => bugmaster |
2016-09-27 20:30 | msv | Status | resolved => reviewed |
2016-09-27 20:35 |
|
Assigned To | bugmaster => mkv |
2016-09-27 20:47 | git | Note Added: 0058233 | |
2016-09-28 14:45 | msv | Relationship added | related to 0026265 |
2016-09-28 17:00 |
|
Note Added: 0058273 | |
2016-09-28 17:00 |
|
Note Added: 0058274 | |
2016-09-28 17:01 |
|
Note Added: 0058275 | |
2016-09-28 17:01 |
|
Assigned To | mkv => isn |
2016-09-28 17:01 |
|
Status | reviewed => assigned |
2016-09-28 17:01 | git | Note Added: 0058276 | |
2016-09-28 17:01 |
|
Note Added: 0058277 | |
2016-09-28 17:02 |
|
Test case number | => bugs moddata_3 bug27890 |
2016-09-28 17:02 |
|
Status | assigned => feedback |
2016-09-28 18:11 | isn | Note Added: 0058280 | |
2016-09-28 18:16 | isn | Note Edited: 0058280 | |
2016-09-28 18:17 | isn | Assigned To | isn => mkv |
2016-09-28 18:17 | isn | Status | feedback => assigned |
2016-09-28 18:37 | msv | Status | assigned => feedback |
2016-09-29 12:06 |
|
Status | feedback => reviewed |
2016-09-29 12:28 | git | Note Added: 0058304 | |
2016-09-29 12:28 |
|
Note Added: 0058306 | |
2016-09-29 12:28 |
|
Assigned To | mkv => bugmaster |
2016-09-29 12:28 |
|
Status | reviewed => tested |
2016-10-03 13:47 | kgv | Changeset attached | => occt master ece3f950 |
2016-10-03 13:47 | kgv | Assigned To | bugmaster => kgv |
2016-10-03 13:47 | kgv | Status | tested => verified |
2016-10-03 13:47 | kgv | Resolution | open => fixed |
2016-10-28 21:41 | git | Note Added: 0059452 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:38 |
|
Fixed in Version | => 7.1.0 |