0027890: BndLib_Add2dCurve::Add(..) works incorrect on some curves

Draw Harness command 'gbounding' has been extended
to pass curve2d as args and to work in two modes ('normal' and optimal).